namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
