postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  namespace: secure-app
  labels:
    app: postgres
spec:
  containers:
  - name: postgres
    image: postgres:alpine
    ports:
    - containerPort: 5432
